tera/src/snapshot_tests/snapshots/tera__snapshot_tests__build_errors__build_errors@syntax__unclosed_component.txt.snap
---
source: tera/src/snapshot_tests/build_errors.rs
expression: "&err"
input_file: tera/src/snapshot_tests/build_errors/syntax/unclosed_component.txt
---
error: Unclosed component 'card'
 --> test.html:2:27
  |
2 | {% <card title="Hello"> %}
  |                           ^
